Enhanced admin dashboard with improved navigation, button styling, and active page indicators - Updated export button colors to #0055aa - Enhanced reports management button styling and sizing - Reordered modal buttons (primary actions first, cancel with X icon) - Removed 'Urgent' priority option from task modals - Added persistent active page indicators with animations - Enhanced navigation hover effects and visual feedback - Updated both Frontend and Frontend-deploy directories

--- a/Frontend-deploy/admin-reports.html
+++ b/Frontend-deploy/admin-reports.html
@@ -54,7 +54,7 @@
             <div class="page-header">
                 <h1>Reports Management</h1>
                 <div class="header-actions">
-                    <button class="btn secondary" onclick="exportReports()">
+                    <button class="btn secondary" onclick="exportReports()" style="background-color: #0055aa;">
                         <i class="fas fa-download"></i> Export All
                     </button>
                 </div>
