--- a/Frontend-deploy/admin-settings.html
+++ b/Frontend-deploy/admin-settings.html
@@ -240,7 +240,7 @@
                 <button class="btn secondary" onclick="resetSettings()">
                     <i class="fas fa-undo"></i> Reset to Defaults
                 </button>
-                <button class="btn danger" onclick="exportSettings()">
+                <button class="btn danger" onclick="exportSettings()" style="background-color: #0055aa;">
                     <i class="fas fa-download"></i> Export Settings
                 </button>
             </div>
