--- a/Frontend/admin-dashboard.html
+++ b/Frontend/admin-dashboard.html
@@ -27,7 +27,7 @@
                 </a>
 
                 <div class="nav-menu">
-                    <a href="./admin-dashboard.html" class="nav-link">
+                    <a href="active" class="nav-link">
                         <i class="fas fa-tachometer-alt"></i>
                         Dashboard
                     </a>
@@ -166,14 +166,6 @@
                 <div class="charts-container">
                     <div class="chart-card">
                         <h3>System Overview (Barchart)</h3>
-                        <div style="margin-bottom: 1rem;">
-                            <button onclick="testAPIEndpoint()" class="btn" style="margin-right: 0.5rem;">
-                                <i class="fas fa-vial"></i> Test API
-                            </button>
-                            <button onclick="testChartCreation()" class="btn">
-                                <i class="fas fa-chart-bar"></i> Test Chart
-                            </button>
-                        </div>
                         <div id="adminBarChartContainer">
                             <canvas id="adminBarChart"></canvas>
                             <div id="adminBarChartFallback"
