--- a/Frontend/inventory.html
+++ b/Frontend/inventory.html
@@ -194,7 +194,7 @@
           <button id="addInventoryBtn" onclick="addInventory()">Add</button>
           <button onclick="hideAddModal()">Cancel</button>
 
-          <button onclick="exportToExcel()">Export to Excel</button>
+          <button onclick="exportToExcel()" style="background-color: #0055aa; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Export to Excel</button>
         </div>
       </div>
 
