--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -113,7 +113,9 @@
             <div class="form-group"><label>New Password</label><input id="newPassword" type="password"
                 autocomplete="new-password"></div>
             <div class="form-actions" style="display:flex;gap:8px;justify-content:flex-end;">
-              <button type="button" class="btn secondary" onclick="closeEditProfileModal()">Cancel</button>
+              <button type="button" class="btn cancel" onclick="closeEditProfileModal()">
+                <i class="fas fa-times"></i> Cancel
+              </button>
               <button type="submit" class="btn primary">Save Changes</button>
             </div>
           </form>
