--- a/Frontend-deploy/admin-inventory.html
+++ b/Frontend-deploy/admin-inventory.html
@@ -218,7 +218,7 @@
             <div class="page-header">
                 <h1>Inventory Management</h1>
                 <div class="header-actions">
-                    <button class="btn secondary" onclick="exportInventory()">
+                    <button class="btn secondary" onclick="exportInventory()" style="background-color: #0055aa;">
                         <i class="fas fa-download"></i> Export All
                     </button>
                 </div>
