--- a/Frontend-deploy/admin-users.html
+++ b/Frontend-deploy/admin-users.html
@@ -269,8 +269,11 @@
                     <input type="password" id="confirmPassword" required>
                 </div>
                 <div class="form-actions">
-                    <button type="button" class="btn secondary" onclick="closeResetPasswordModal()">Cancel</button>
                     <button type="submit" class="btn primary">Reset Password</button>
+                    <button type="button" class="btn danger" onclick="closeResetPasswordModal()"
+                        style="background-color: #e74c3c; color: white;">
+                        <i class="fas fa-times"></i> Cancel
+                    </button>
                 </div>
             </form>
         </div>
