--- a/Frontend/admin-inventory.html
+++ b/Frontend/admin-inventory.html
@@ -197,7 +197,7 @@
                         <i class="fas fa-chart-bar"></i>
                         Reports Management
                     </a>
-                    <a href="./admin-inventory.html" class="nav-link active">
+                    <a href="active" class="nav-link active">
                         <i class="fas fa-boxes"></i>
                         Inventory Management
                     </a>
@@ -218,7 +218,7 @@
             <div class="page-header">
                 <h1>Inventory Management</h1>
                 <div class="header-actions">
-                    <button class="btn secondary" onclick="exportInventory()">
+                    <button class="btn secondary" onclick="exportInventory()" style="background-color: #0055aa;">
                         <i class="fas fa-download"></i> Export All
                     </button>
                 </div>
@@ -426,7 +426,9 @@
             </div>
             <div class="modal-footer">
                 <button class="btn primary" onclick="saveInventoryChanges()">Save Changes</button>
-                <button class="btn secondary" onclick="closeEditModal()">Cancel</button>
+                <button class="btn cancel" onclick="closeEditModal()">
+                    <i class="fas fa-times"></i> Cancel
+                </button>
             </div>
         </div>
     </div>
