--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -29,7 +29,7 @@
                         <i class="fas fa-users"></i>
                         User Management
                     </a>
-                    <a href="./admin-reports.html" class="nav-link active">
+                    <a href="active" class="nav-link active">
                         <i class="fas fa-chart-bar"></i>
                         Reports Management
                     </a>
@@ -54,7 +54,7 @@
             <div class="page-header">
                 <h1>Reports Management</h1>
                 <div class="header-actions">
-                    <button class="btn secondary" onclick="exportReports()">
+                    <button class="btn secondary" onclick="exportReports()" style="background-color: #0055aa;">
                         <i class="fas fa-download"></i> Export All
                     </button>
                 </div>
