--- a/Frontend/admin-users.html
+++ b/Frontend/admin-users.html
@@ -26,7 +26,7 @@
                         <i class="fas fa-tachometer-alt"></i>
                         Dashboard
                     </a>
-                    <a href="./admin-users.html" class="nav-link active">
+                    <a href="active" class="nav-link active">
                         <i class="fas fa-users"></i>
                         User Management
                     </a>
@@ -244,7 +244,9 @@
                     </select>
                 </div>
                 <div class="form-actions">
-                    <button type="button" class="btn secondary" onclick="closeEditUserModal()">Cancel</button>
+                    <button type="button" class="btn cancel" onclick="closeEditUserModal()">
+                        <i class="fas fa-times"></i> Cancel
+                    </button>
                     <button type="submit" class="btn primary">Save</button>
                 </div>
             </form>
@@ -269,8 +271,11 @@
                     <input type="password" id="confirmPassword" required>
                 </div>
                 <div class="form-actions">
-                    <button type="button" class="btn secondary" onclick="closeResetPasswordModal()">Cancel</button>
                     <button type="submit" class="btn primary">Reset Password</button>
+                    <button type="button" class="btn danger" onclick="closeResetPasswordModal()"
+                        style="background-color: #e74c3c; color: white;">
+                        <i class="fas fa-times"></i> Cancel
+                    </button>
                 </div>
             </form>
         </div>
