--- a/Frontend/tool_box.html
+++ b/Frontend/tool_box.html
@@ -121,21 +121,22 @@
     }
 
     form button[type="submit"] {
-      background: #3498db;
+      background: #0055aa;
       color: white;
-      padding: 15px 30px;
+      padding: 12px 24px;
       border: none;
       border-radius: 6px;
       font-size: 16px;
       font-weight: 600;
       cursor: pointer;
-      width: 100%;
+      width: auto;
+      display: inline-block;
       transition: background-color 0.3s ease;
       -webkit-tap-highlight-color: transparent;
     }
 
     form button[type="submit"]:hover {
-      background: #2980b9;
+      background: #004080;
     }
 
     form button[type="submit"]:disabled {
@@ -164,35 +165,37 @@
     }
 
     #selectedToolsList li {
-      background: transparent;
-      color: #333;
-      padding: 8px 12px;
-      border-radius: 0;
-      font-size: 14px;
-      display: flex;
+      display: inline-flex;
       align-items: center;
-      gap: 8px;
-      border: none;
+      padding: 4px 12px;
+      font-size: 12px;
+      color: #000000;
+      max-width: 200px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .remove-tool {
-      background: #dc3545;
+      background: #f44336;
       color: white;
       border: none;
       border-radius: 50%;
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
+      margin-left: 8px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 14px;
       line-height: 1;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.3s ease;
+      padding: 0;
+      transition: background-color 0.2s ease;
     }
 
     .remove-tool:hover {
-      background: #c82333;
+      background: #d32f2f;
     }
 
 
@@ -375,10 +378,7 @@
         style="display: none; margin: 20px auto; max-width: 800px; padding: 15px; border-radius: 6px; text-align: center; font-weight: 600;">
       </div>
 
-      <div class="form-header"
-        style="margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center;">
-        <h2>Toolbox Form</h2>
-      </div>
+
 
       <form id="toolboxForm" action="#" method="post">
         <h3>FACILITY:</h3>
@@ -483,7 +483,7 @@
         <!-- Add View Toolbox button under submit button -->
         <div style="margin-top: 20px; text-align: center;">
           <a href="./toolbox-submitted.html" class="btn-secondary"
-            style="display: inline-block; padding: 12px 24px; background: #6c757d; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; transition: background-color 0.3s ease; margin-right: 10px;">
+            style="display: inline-block; padding: 12px 24px; background: #2c3e50; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; transition: background-color 0.3s ease; margin-right: 10px;">
             👁️ View My Toolbox
           </a>
         </div>
