--- a/Frontend/admin-dashboard.html
+++ b/Frontend/admin-dashboard.html
@@ -27,7 +27,7 @@
                 </a>
 
                 <div class="nav-menu">
-                    <a href="active" class="nav-link">
+                    <a href="./admin-dashboard.html" class="nav-link">
                         <i class="fas fa-tachometer-alt"></i>
                         Dashboard
                     </a>
