--- a/Frontend/inventory.html
+++ b/Frontend/inventory.html
@@ -318,7 +318,7 @@
       updateInventoryPaginationInfo(totalInventory);
     }
 
-    // Make pagination functions globally accessible
+vens
     window.updateInventoryPaginationInfo = updateInventoryPaginationInfo;
     window.changeInventoryPage = changeInventoryPage;
     window.renderInventoryWithPagination = renderInventoryWithPagination;
