--- a/Frontend/admin-inventory.html
+++ b/Frontend/admin-inventory.html
@@ -197,7 +197,7 @@
                         <i class="fas fa-chart-bar"></i>
                         Reports Management
                     </a>
-                    <a href="active" class="nav-link active">
+                    <a href="./admin-inventory.html" class="nav-link active">
                         <i class="fas fa-boxes"></i>
                         Inventory Management
                     </a>
