--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -29,7 +29,7 @@
                         <i class="fas fa-users"></i>
                         User Management
                     </a>
-                    <a href="active" class="nav-link active">
+                    <a href="./admin-reports.html" class="nav-link active">
                         <i class="fas fa-chart-bar"></i>
                         Reports Management
                     </a>
