--- a/Frontend/admin-users.html
+++ b/Frontend/admin-users.html
@@ -26,7 +26,7 @@
                         <i class="fas fa-tachometer-alt"></i>
                         Dashboard
                     </a>
-                    <a href="active" class="nav-link active">
+                    <a href="./admin-users.html" class="nav-link active">
                         <i class="fas fa-users"></i>
                         User Management
                     </a>
